--- a/snuffbox-engine/CMakeLists.txt
+++ b/snuffbox-engine/CMakeLists.txt
@@ -13,11 +13,19 @@ FILE(GLOB_RECURSE SNUFF_ENGINE_GRAPHICS
 	"graphics/${SNUFF_GRAPHICS_PREFIX}/*.h"
 )
 
+FILE(GLOB_RECURSE SNUFF_ENGINE_MEMORY
+	"memory/*.cc"
+	"memory/*.h"
+)
+
 SET(SNUFF_ENGINE_SOURCES
 	${SNUFF_ENGINE_GRAPHICS}
+	${SNUFF_ENGINE_MEMORY}
 )
 
 SOURCE_GROUP("graphics\\${SNUFF_GRAPHICS_PREFIX}" FILES ${SNUFF_ENGINE_GRAPHICS})
+SOURCE_GROUP("memory" FILES ${SNUFF_ENGINE_MEMORY})
 
 ADD_LIBRARY(snuffbox-engine ${SNUFF_ENGINE_SOURCES})
+TARGET_LINK_LIBRARIES(snuffbox-engine EASTL)
 SET_TARGET_PROPERTIES(snuffbox-engine PROPERTIES LINKER_LANGUAGE CXX)
