Implementation for adding messages to the console with different severities

--- a/snuffbox-console/CMakeLists.txt
+++ b/snuffbox-console/CMakeLists.txt
@@ -76,14 +76,21 @@ FILE(GLOB_RECURSE SNUFF_CONSOLE_APPLICATION
 	"application/*.h"
 )
 
+FILE(GLOB_RECURSE SNUFF_CONSOLE_LOGGING
+	"logging/*.cc"
+	"logging/*.h"
+)
+
 SOURCE_GROUP("\\" FILES ${SNUFF_CONSOLE_ROOT})
 SOURCE_GROUP("forms" FILES ${SNUFF_CONSOLE_FORMS})
 SOURCE_GROUP("application" FILES ${SNUFF_CONSOLE_APPLICATION})
+SOURCE_GROUP("logging" FILES ${SNUFF_CONSOLE_LOGGING})
 
 SET(SNUFF_CONSOLE_SOURCES
 	${SNUFF_CONSOLE_ROOT}
 	${SNUFF_CONSOLE_FORMS}
 	${SNUFF_CONSOLE_APPLICATION}
+	${SNUFF_CONSOLE_LOGGING}
 )
 
 ADD_EXECUTABLE(snuffbox-console ${SNUFF_CONSOLE_SOURCES})
