Setting up a logging connection, it seems to work. However; the console still breaks as I'm not sending messages to it thread-safe

--- a/snuffbox-console/CMakeLists.txt
+++ b/snuffbox-console/CMakeLists.txt
@@ -94,6 +94,7 @@ SET(SNUFF_CONSOLE_SOURCES
 )
 
 ADD_EXECUTABLE(snuffbox-console ${SNUFF_CONSOLE_SOURCES})
+TARGET_LINK_LIBRARIES(snuffbox-console snuffbox-logging)
 TARGET_LINK_LIBRARIES(snuffbox-console debug "${WX_DEBUG_LIBS}" optimized "${WX_RELEASE_LIBS}")
 INCLUDE_DIRECTORIES("${WXWIDGETS_DIR}/include")
 INCLUDE_DIRECTORIES(
