Moved everything to their respective project namespaces, started on the application class and core features. Implemented a memory system and made EASTL use it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,8 +39,7 @@ SET_PROPERTY(CACHE "WXWIDGETS_VERSION_MAJOR" PROPERTY STRINGS "0" "1" "2" "3" "4
 SET_PROPERTY(CACHE "WXWIDGETS_VERSION_MINOR" PROPERTY STRINGS "0" "1" "2" "3" "4" "5")
 
 INCLUDE_DIRECTORIES("${EASTL_DIR}/include")
-INCLUDE_DIRECTORIES("snuffbox-logging")
-INCLUDE_DIRECTORIES("snuffbox-console")
+INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
 
 ADD_SUBDIRECTORY("${EASTL_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/deps/eastl")
 ADD_SUBDIRECTORY("snuffbox-logging")
