--- a/snuffbox-engine/CMakeLists.txt
+++ b/snuffbox-engine/CMakeLists.txt
@@ -18,13 +18,35 @@ FILE(GLOB_RECURSE SNUFF_ENGINE_MEMORY
 	"memory/*.h"
 )
 
+FILE(GLOB_RECURSE SNUFF_ENGINE_APPLICATION
+	"application/*.cc"
+	"application/*.h"
+)
+
+FILE(GLOB_RECURSE SNUFF_ENGINE_LOGGING
+	"logging/*.cc"
+	"logging/*.h"
+)
+
+FILE(GLOB_RECURSE SNUFF_ENGINE_CORE
+	"core/*.cc"
+	"core/*.h"
+)
+
 SET(SNUFF_ENGINE_SOURCES
 	${SNUFF_ENGINE_GRAPHICS}
 	${SNUFF_ENGINE_MEMORY}
+	${SNUFF_ENGINE_APPLICATION}
+	${SNUFF_ENGINE_LOGGING}
+	${SNUFF_ENGINE_CORE}
 )
 
 SOURCE_GROUP("graphics\\${SNUFF_GRAPHICS_PREFIX}" FILES ${SNUFF_ENGINE_GRAPHICS})
 SOURCE_GROUP("memory" FILES ${SNUFF_ENGINE_MEMORY})
+SOURCE_GROUP("application" FILES ${SNUFF_ENGINE_APPLICATION})
+SOURCE_GROUP("logging" FILES ${SNUFF_ENGINE_LOGGING})
+SOURCE_GROUP("core" FILES ${SNUFF_ENGINE_CORE})
+
 
 ADD_LIBRARY(snuffbox-engine ${SNUFF_ENGINE_SOURCES})
 TARGET_LINK_LIBRARIES(snuffbox-engine EASTL)
