Added Service/Locator model, implemented all of the logging functionality for the end-user, added UniquePtr<T> and SharedPtr<T>, added a cross-platform Assert

--- a/snuffbox-engine/CMakeLists.txt
+++ b/snuffbox-engine/CMakeLists.txt
@@ -33,12 +33,18 @@ FILE(GLOB_RECURSE SNUFF_ENGINE_CORE
 	"core/*.h"
 )
 
+FILE(GLOB_RECURSE SNUFF_ENGINE_SERVICES
+	"services/*.cc"
+	"services/*.h"
+)
+
 SET(SNUFF_ENGINE_SOURCES
 	${SNUFF_ENGINE_GRAPHICS}
 	${SNUFF_ENGINE_MEMORY}
 	${SNUFF_ENGINE_APPLICATION}
 	${SNUFF_ENGINE_LOGGING}
 	${SNUFF_ENGINE_CORE}
+	${SNUFF_ENGINE_SERVICES}
 )
 
 SOURCE_GROUP("graphics\\${SNUFF_GRAPHICS_PREFIX}" FILES ${SNUFF_ENGINE_GRAPHICS})
@@ -46,6 +52,7 @@ SOURCE_GROUP("memory" FILES ${SNUFF_ENGINE_MEMORY})
 SOURCE_GROUP("application" FILES ${SNUFF_ENGINE_APPLICATION})
 SOURCE_GROUP("logging" FILES ${SNUFF_ENGINE_LOGGING})
 SOURCE_GROUP("core" FILES ${SNUFF_ENGINE_CORE})
+SOURCE_GROUP("services" FILES ${SNUFF_ENGINE_SERVICES})
 
 
 ADD_LIBRARY(snuffbox-engine ${SNUFF_ENGINE_SOURCES})
