--- a/snuffbox-console/CMakeLists.txt
+++ b/snuffbox-console/CMakeLists.txt
@@ -1,64 +1,8 @@
-SET(WX_VERSION "${WXWIDGETS_VERSION_MAJOR}${WXWIDGETS_VERSION_MINOR}")
+FIND_PACKAGE(wxWidgets REQUIRED COMPONENTS core base richtext html qa xrc propgrid aui adv xml)
 
-IF (WIN32)
-	SET(WX_LIB_DIR "${WXWIDGETS_DIR}/lib/vc_x64_lib")
-	SET(WX_LIB_EXTENSION ".lib")
-ELSE ()
-	SET(WX_LIB_DIR "${WXWIDGETS_DIR}/lib/<gcc/clang>_lib")
-	SET(WX_LIB_EXTENSION ".a")
-ENDIF ()
-
-SET(WX_DEPS
-	"png"
-	"zlib"
-	"jpeg"
-	"tiff"
-	"expat"
-)
-
-SET(WX_EXTENSIONS
-	"core"
-	"richtext"
-	"html"
-	"qa"
-	"xrc"
-	"propgrid"
-	"aui"
-	"adv"
-)
-
-SET(WX_DEBUG_LIBS
-	"${WX_LIB_DIR}/wxbase${WX_VERSION}ud${WX_LIB_EXTENSION}"
-	"${WX_LIB_DIR}/wxbase${WX_VERSION}ud_xml${WX_LIB_EXTENSION}"
-	"${WX_LIB_DIR}/wxpngd${WX_LIB_EXTENSION}"
-)
-
-SET(WX_RELEASE_LIBS
-	"${WX_LIB_DIR}/wxbase${WX_VERSION}u${WX_LIB_EXTENSION}"
-	"${WX_LIB_DIR}/wxbase${WX_VERSION}u_xml${WX_LIB_EXTENSION}"
-)
-
-FOREACH (WX_DEP ${WX_DEPS})
-	SET(WX_DEBUG_LIBS "${WX_DEBUG_LIBS}" "${WX_LIB_DIR}/wx${WX_DEP}d${WX_LIB_EXTENSION}")
-	SET(WX_RELEASE_LIBS "${WX_RELEASE_LIBS}" "${WX_LIB_DIR}/wx${WX_DEP}${WX_LIB_EXTENSION}")
-ENDFOREACH ()
-
-FOREACH (WX_EXTENSION ${WX_EXTENSIONS})
-	SET(WX_DEBUG_LIBS "${WX_DEBUG_LIBS}" "${WX_LIB_DIR}/wxmsw${WX_VERSION}ud_${WX_EXTENSION}${WX_LIB_EXTENSION}")
-	SET(WX_RELEASE_LIBS "${WX_RELEASE_LIBS}" "${WX_LIB_DIR}/wxmsw${WX_VERSION}u_${WX_EXTENSION}${WX_LIB_EXTENSION}")
-ENDFOREACH ()
-
-IF (WIN32)
-	SET(WX_ADDITIONAL_LIBS
-		"comctl32.lib"
-		"rpcrt4.lib"
-		"winmm.lib"
-		"advapi32.lib"
-		"wsock32.lib"
-	)
-
-	SET(WX_DEBUG_LIBS ${WX_DEBUG_LIBS} ${WX_ADDITIONAL_LIBS})
-	SET(WX_RELEASE_LIBS ${WX_RELEASE_LIBS} ${WX_ADDITIONAL_LIBS})
+IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
+    EXECUTE_PROCESS(COMMAND wx-config --cxxflags OUTPUT_VARIABLE WX_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${WX_FLAGS}")
 ENDIF ()
 
 FILE(GLOB_RECURSE SNUFF_CONSOLE_ROOT
@@ -95,14 +39,21 @@ SET(SNUFF_CONSOLE_SOURCES
 
 ADD_EXECUTABLE(snuffbox-console ${SNUFF_CONSOLE_SOURCES})
 TARGET_LINK_LIBRARIES(snuffbox-console snuffbox-logging)
-TARGET_LINK_LIBRARIES(snuffbox-console debug "${WX_DEBUG_LIBS}" optimized "${WX_RELEASE_LIBS}")
-INCLUDE_DIRECTORIES("${WXWIDGETS_DIR}/include")
-INCLUDE_DIRECTORIES(
-	$<$<CONFIG:Debug>:${WX_LIB_DIR}/mswud>
-	$<$<CONFIG:Release>:${WX_LIB_DIR}/mswu>
-)
+TARGET_LINK_LIBRARIES(snuffbox-console ${wxWidgets_LIBRARIES})
+INCLUDE_DIRECTORIES("${wxWidgets_INCLUDE_DIRS}")
 
 IF (WIN32)
-	SET_TARGET_PROPERTIES(snuffbox-console PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:WINDOWS")
-	SET_TARGET_PROPERTIES(snuffbox-console PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS")
+	INCLUDE_DIRECTORIES(
+		$<$<CONFIG:Debug>:${WX_LIB_DIR_DEB}/mswud>
+		$<$<CONFIG:Release>:${WX_LIB_DIR_REL}/mswu>
+	)
+ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
+	INCLUDE_DIRECTORIES(
+		$<$<CONFIG:Debug>:${WX_LIB_DIR_DEB}/wx/include/gtk3-unicode-static-${WX_VERSION}>
+		$<$<CONFIG:Release>:${WX_LIB_DIR_REL}/wx/include/gtk3-unicode-static-${WX_VERSION}>
+	)
+ENDIF ()
+
+IF (WIN32)
+	SET_TARGET_PROPERTIES(snuffbox-console PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
 ENDIF ()
