Added JavaScript through V8 again, very basic implementation. I also updated CMake to use FIND_PACKAGE for all dependencies, changed const Args&... to Args&&... everywhere for proper forwarding, some other stuff I cannot remember. Renamed defines.h to wx_defines.h in snuffbox-console

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
 PROJECT(snuffbox-mantis C CXX)
 
+SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
+
 SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
 SET_PROPERTY(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "cmake-targets")
 
@@ -15,6 +17,9 @@ SET_PROPERTY(CACHE "SNUFF_OGL_VERSION" PROPERTY STRINGS "ogl" "vulkan")
 
 OPTION(SNUFF_JAVASCRIPT "Should V8 (JavaScript) be enabled for this build?")
 
+SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} /MTd")
+SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} /MT")
+
 SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS
     $<$<CONFIG:Debug>:SNUFF_DEBUG>
     $<$<CONFIG:Release>:SNUFF_RELEASE>
@@ -24,24 +29,35 @@ IF (WIN32)
 	ADD_DEFINITIONS("/DSNUFF_WIN32")
 ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
 	ADD_DEFINITIONS("/DSNUFF_LINUX")
-        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lgtk-x11-2.0 -lgobject-2.0 -pthread")
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
 ENDIF ()
 
 ADD_DEFINITIONS("/DSNUFF_DEFAULT_PORT=${SNUFF_DEFAULT_PORT}")
 ADD_DEFINITIONS("/DSNUFF_LOG_TIMEOUT=${SNUFF_LOG_TIMEOUT}")
 ADD_DEFINITIONS("/DSNUFF_LOG_BUFFERSIZE=${SNUFF_LOG_BUFFERSIZE}")
 
-SET(EASTL_DIR "" CACHE PATH "Specifies the location of EASTL (find the repo here: https://github.com/electronicarts/EASTL)")
-
 INCLUDE_DIRECTORIES("${EASTL_DIR}/include")
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
 
-ADD_SUBDIRECTORY("${EASTL_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/deps/eastl")
+FIND_PACKAGE(EASTL REQUIRED)
+ADD_SUBDIRECTORY("${EASTL_ROOT_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/deps/eastl")
+
+IF (SNUFF_JAVASCRIPT)
+	ADD_DEFINITIONS("/DSNUFF_JAVASCRIPT")
+	FIND_PACKAGE(V8 REQUIRED)
+
+	INCLUDE_DIRECTORIES(${V8_INCLUDE_DIR})
+ENDIF ()
+
 ADD_SUBDIRECTORY("snuffbox-logging")
 ADD_SUBDIRECTORY("snuffbox-console")
 ADD_SUBDIRECTORY("snuffbox-engine")
 ADD_SUBDIRECTORY("snuffbox-test")
 
+IF (SNUFF_JAVASCRIPT)
+	ADD_SUBDIRECTORY("snuffbox-javascript")
+	SET_TARGET_PROPERTIES(snuffbox-javascript PROPERTIES FOLDER "snuffbox-mantis")
+ENDIF ()
 
 SET_TARGET_PROPERTIES(EASTL PROPERTIES FOLDER "deps/eastl")
 SET_TARGET_PROPERTIES(EABase_ide PROPERTIES FOLDER "deps/eastl")
