--- a/snuffbox-engine/CMakeLists.txt
+++ b/snuffbox-engine/CMakeLists.txt
@@ -54,6 +54,25 @@ SOURCE_GROUP("logging" FILES ${SNUFF_ENGINE_LOGGING})
 SOURCE_GROUP("core" FILES ${SNUFF_ENGINE_CORE})
 SOURCE_GROUP("services" FILES ${SNUFF_ENGINE_SERVICES})
 
+IF (SNUFF_JAVASCRIPT)	
+	FILE(GLOB_RECURSE SNUFF_ENGINE_JS
+		"js/*.cc"
+		"js/*.h"
+	)
+	
+	SET(SNUFF_ENGINE_SOURCES
+		${SNUFF_ENGINE_SOURCES}
+		${SNUFF_ENGINE_JS}
+	)
+	
+	SOURCE_GROUP("js" FILES ${SNUFF_ENGINE_JS})
+ENDIF ()
 
 ADD_LIBRARY(snuffbox-engine ${SNUFF_ENGINE_SOURCES})
+
 TARGET_LINK_LIBRARIES(snuffbox-engine EASTL)
+TARGET_LINK_LIBRARIES(snuffbox-engine snuffbox-logging)
+
+IF (SNUFF_JAVASCRIPT)
+	TARGET_LINK_LIBRARIES(snuffbox-engine debug "${V8_LIBS_DEBUG}" optimized "${V8_LIBS_RELEASE}")
+ENDIF ()
