Working on content management

--- a/snuffbox-engine/CMakeLists.txt
+++ b/snuffbox-engine/CMakeLists.txt
@@ -38,6 +38,11 @@ FILE(GLOB_RECURSE SNUFF_ENGINE_SERVICES
 	"services/*.h"
 )
 
+FILE(GLOB_RECURSE SNUFF_ENGINE_IO
+	"io/*.cc"
+	"io/*.h"
+)
+
 SET(SNUFF_ENGINE_SOURCES
 	${SNUFF_ENGINE_GRAPHICS}
 	${SNUFF_ENGINE_MEMORY}
@@ -45,6 +50,7 @@ SET(SNUFF_ENGINE_SOURCES
 	${SNUFF_ENGINE_LOGGING}
 	${SNUFF_ENGINE_CORE}
 	${SNUFF_ENGINE_SERVICES}
+	${SNUFF_ENGINE_IO}
 )
 
 SOURCE_GROUP("graphics\\${SNUFF_GRAPHICS_PREFIX}" FILES ${SNUFF_ENGINE_GRAPHICS})
@@ -53,6 +59,7 @@ SOURCE_GROUP("application" FILES ${SNUFF_ENGINE_APPLICATION})
 SOURCE_GROUP("logging" FILES ${SNUFF_ENGINE_LOGGING})
 SOURCE_GROUP("core" FILES ${SNUFF_ENGINE_CORE})
 SOURCE_GROUP("services" FILES ${SNUFF_ENGINE_SERVICES})
+SOURCE_GROUP("io" FILES ${SNUFF_ENGINE_IO})
 
 IF (SNUFF_JAVASCRIPT)	
 	FILE(GLOB_RECURSE SNUFF_ENGINE_JS
