Fixed the Linux build to actually compile under g++, changed FindV8.cmake to actually load Linux dependencies, fixed wxWidgets event filtering. Added TAB as shortcut to switch console mode.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,10 @@ SET(SNUFF_RELOAD_AFTER "1000" CACHE STRING "Specifies after how many frames the 
 
 OPTION(SNUFF_JAVASCRIPT "Should V8 (JavaScript) be enabled for this build?")
 
-SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
-SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+IF (WIN32)
+    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+    SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+ENDIF ()
 
 SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS
     $<$<CONFIG:Debug>:SNUFF_DEBUG>
@@ -30,7 +32,7 @@ IF (WIN32)
 	ADD_DEFINITIONS("/DSNUFF_WIN32")
 ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
 	ADD_DEFINITIONS("/DSNUFF_LINUX")
-        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -fno-rtti")
 ENDIF ()
 
 ADD_DEFINITIONS("/DSNUFF_DEFAULT_PORT=${SNUFF_DEFAULT_PORT}")
