Added V8_IMMINENT_DEPRECATION_WARNINGS and adjusted everything accordingly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,9 @@ FIND_PACKAGE(EASTL REQUIRED)
 ADD_SUBDIRECTORY("${EASTL_ROOT_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/deps/eastl")
 
 IF (SNUFF_JAVASCRIPT)
-	ADD_DEFINITIONS("/DSNUFF_JAVASCRIPT")
+        ADD_DEFINITIONS("/DSNUFF_JAVASCRIPT")
+        ADD_DEFINITIONS("/DV8_IMMINENT_DEPRECATION_WARNINGS")
+
 	FIND_PACKAGE(V8 REQUIRED)
 
 	INCLUDE_DIRECTORIES(${V8_INCLUDE_DIR})
