--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,22 @@ OPTION(SNUFF_BUILD_TEST "Build the test environment project 'snuffbox-test'")
 OPTION(SNUFF_JAVASCRIPT "Should V8 (JavaScript) be enabled for this build?")
 
 IF (WIN32)
-    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
-    SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+	FOREACH(FLAG CMAKE_C_FLAGS
+	             CMAKE_C_FLAGS_DEBUG
+	             CMAKE_C_FLAGS_RELEASE
+	             CMAKE_CXX_FLAGS
+	             CMAKE_CXX_FLAGS_DEBUG
+	             CMAKE_CXX_FLAGS_RELEASE)
+
+	    IF (${FLAG} MATCHES "/MD")
+	        STRING(REGEX REPLACE "/MD" "/MT" ${FLAG} "${${FLAG}}")
+	    ENDIF ()
+
+	    IF (${FLAG} MATCHES "/MDd")
+	        STRING(REGEX REPLACE "/MDd" "/MTd" ${FLAG} "${${FLAG}}")
+	    ENDIF ()
+
+    ENDFOREACH()
 ENDIF ()
 
 SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS
@@ -75,6 +89,7 @@ ENDIF ()
 
 SET_TARGET_PROPERTIES(EASTL PROPERTIES FOLDER "deps/eastl")
 SET_TARGET_PROPERTIES(EABase_ide PROPERTIES FOLDER "deps/eastl")
+SET_TARGET_PROPERTIES(glfw PROPERTIES FOLDER "deps/glfw3")
 SET_TARGET_PROPERTIES(snuffbox-logging PROPERTIES FOLDER "snuffbox-mantis")
 SET_TARGET_PROPERTIES(snuffbox-console PROPERTIES FOLDER "snuffbox-mantis")
 SET_TARGET_PROPERTIES(snuffbox-engine PROPERTIES FOLDER "snuffbox-mantis")
