--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,9 @@ INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
 FIND_PACKAGE(EASTL REQUIRED)
 ADD_SUBDIRECTORY("${EASTL_ROOT_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/deps/eastl")
 
+FIND_PACKAGE(GLFWSource REQUIRED)
+ADD_SUBDIRECTORY("${GLFW_ROOT_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/deps/glfw")
+
 IF (SNUFF_JAVASCRIPT)
         ADD_DEFINITIONS("/DSNUFF_JAVASCRIPT")
         ADD_DEFINITIONS("/DV8_IMMINENT_DEPRECATION_WARNINGS")
