Added Win32 command line build generation, so all dependencies are fetched automatically

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-#QtCreator creates user files for storing CMake variables
+# QtCreator creates user files for storing CMake variables
 *.txt.user
+
+# Generated dependencies
+deps
