--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,14 +55,33 @@ ADD_DEFINITIONS("/DSNUFF_LOG_TIMEOUT=${SNUFF_LOG_TIMEOUT}")
 ADD_DEFINITIONS("/DSNUFF_LOG_BUFFERSIZE=${SNUFF_LOG_BUFFERSIZE}")
 ADD_DEFINITIONS("/DSNUFF_RELOAD_AFTER=${SNUFF_RELOAD_AFTER}")
 
-INCLUDE_DIRECTORIES("${EASTL_DIR}/include")
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
 
 FIND_PACKAGE(EASTL REQUIRED)
 ADD_SUBDIRECTORY("${EASTL_ROOT_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/deps/eastl")
+INCLUDE_DIRECTORIES("${EASTL_DIR}/include")
 
 FIND_PACKAGE(GLFWSource REQUIRED)
 ADD_SUBDIRECTORY("${GLFW_ROOT_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/deps/glfw")
+
+IF (WIN32)
+	SET (wxWidgets_ROOT_DIR "deps/eastl" CACHE PATH "The root directory of wxWidgets")
+ENDIF ()
+
+FIND_PACKAGE(wxWidgets REQUIRED COMPONENTS core base richtext html qa xrc propgrid aui adv xml)
+INCLUDE_DIRECTORIES("${wxWidgets_ROOT_DIR}/include")
+
+IF (WIN32)
+	INCLUDE_DIRECTORIES(
+		$<$<CONFIG:Debug>:${wxWidgets_LIB_DIR}/mswud>
+		$<$<CONFIG:Release>:${wxWidgets_LIB_DIR}/mswu>
+	)
+ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
+	INCLUDE_DIRECTORIES(
+		$<$<CONFIG:Debug>:${wxWidgets_LIB_DIR}/wx/include/gtk3-unicode-static-${WX_VERSION}>
+		$<$<CONFIG:Release>:${wxWidgets_LIB_DIR}/wx/include/gtk3-unicode-static-${WX_VERSION}>
+	)
+ENDIF ()
 
 IF (SNUFF_JAVASCRIPT)
         ADD_DEFINITIONS("/DSNUFF_JAVASCRIPT")
