Finished RC4 encryption to encrypt script files. SNUFF_ENCRPYTION_KEY is to be used per Snuffbox instance for building assets

--- a/snuffbox-engine/CMakeLists.txt
+++ b/snuffbox-engine/CMakeLists.txt
@@ -80,6 +80,7 @@ ADD_LIBRARY(snuffbox-engine ${SNUFF_ENGINE_SOURCES})
 TARGET_LINK_LIBRARIES(snuffbox-engine EASTL)
 TARGET_LINK_LIBRARIES(snuffbox-engine glfw ${GLFW_LIBRARIES})
 TARGET_LINK_LIBRARIES(snuffbox-engine snuffbox-logging)
+TARGET_LINK_LIBRARIES(snuffbox-engine snuffbox-compilers)
 
 IF (SNUFF_JAVASCRIPT)
         TARGET_LINK_LIBRARIES(snuffbox-engine debug "${V8_LIBS_DEBUG}" optimized "${V8_LIBS_RELEASE}")
