Moved wx_defines.h up a level so other wxApps can access it, created the base interface and UI functionality for snuffbox-builder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,6 +114,7 @@ ENDIF ()
 ADD_SUBDIRECTORY("snuffbox-logging")
 ADD_SUBDIRECTORY("snuffbox-console")
 ADD_SUBDIRECTORY("snuffbox-compilers")
+ADD_SUBDIRECTORY("snuffbox-builder")
 ADD_SUBDIRECTORY("snuffbox-engine")
 
 IF (SNUFF_BUILD_TEST)
@@ -180,4 +181,5 @@ SET_TARGET_PROPERTIES(EABase_ide PROPERTIES FOLDER "deps/eastl")
 SET_TARGET_PROPERTIES(snuffbox-logging PROPERTIES FOLDER "snuffbox-mantis")
 SET_TARGET_PROPERTIES(snuffbox-console PROPERTIES FOLDER "snuffbox-mantis")
 SET_TARGET_PROPERTIES(snuffbox-compilers PROPERTIES FOLDER "snuffbox-mantis")
+SET_TARGET_PROPERTIES(snuffbox-builder PROPERTIES FOLDER "snuffbox-mantis")
 SET_TARGET_PROPERTIES(snuffbox-engine PROPERTIES FOLDER "snuffbox-mantis")
