--- a/snuffbox-compilers/CMakeLists.txt
+++ b/snuffbox-compilers/CMakeLists.txt
@@ -1,19 +1,19 @@
-FILE (GLOB_RECURSE SNUFF_COMPILERS_UTILS_SOURCES
+FILE (GLOB_RECURSE SNUFF_COMPILERS_UTILS
 	"utils/*.cc"
 	"utils/*.h"
 )
 
-FILE (GLOB_RECURSE SNUFF_COMPILERS_COMPILERS_SOURCES
+FILE (GLOB_RECURSE SNUFF_COMPILERS_COMPILERS
 	"compilers/*.cc"
 	"compilers/*.h"
 )
 
 SET (SNUFF_COMPILERS_SOURCES
-	${SNUFF_COMPILERS_UTILS_SOURCES}
-	${SNUFF_COMPILERS_COMPILERS_SOURCES}
+	${SNUFF_COMPILERS_UTILS}
+	${SNUFF_COMPILERS_COMPILERS}
 )
 
-SOURCE_GROUP("utils" FILES ${SNUFF_COMPILERS_UTILS_SOURCES})
-SOURCE_GROUP("compilers" FILES ${SNUFF_COMPILERS_COMPILERS_SOURCES})
+SOURCE_GROUP("utils" FILES ${SNUFF_COMPILERS_UTILS})
+SOURCE_GROUP("compilers" FILES ${SNUFF_COMPILERS_COMPILERS})
 
 ADD_LIBRARY(snuffbox-compilers ${SNUFF_COMPILERS_SOURCES})
