Started on the build pipeline for snuffbox-builder Cross-platform setup for the folder enumeration

--- a/snuffbox-builder/CMakeLists.txt
+++ b/snuffbox-builder/CMakeLists.txt
@@ -13,15 +13,43 @@ FILE(GLOB_RECURSE SNUFF_BUILDER_APPLICATION
 	"application/*.h"
 )
 
+FILE(GLOB_RECURSE SNUFF_BUILDER_THREADS
+	"threads/*.cc"
+	"threads/*.h"
+)
+
+IF (WIN32)
+	FILE(GLOB_RECURSE SNUFF_BUILDER_UTILS
+		"utils/win32_*.cc"
+		"utils/win32_*.h"
+	)
+ELSEIF (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+	FILE(GLOB_RECURSE SNUFF_BUILDER_UTILS
+		"utils/linux_*.cc"
+		"utils/linux_*.h"
+	)
+ENDIF ()
+
+FILE(GLOB_RECURSE SNUFF_BUILDER_PLATFORM
+	"platform/*.cc"
+	"platform/*.h"
+)
+
 SET(SNUFF_BUILDER_SOURCES
 	${SNUFF_BUILDER_ROOT}
 	${SNUFF_BUILDER_FORMS}
 	${SNUFF_BUILDER_APPLICATION}
+	${SNUFF_BUILDER_THREADS}
+	${SNUFF_BUILDER_UTILS}
+	${SNUFF_BUILDER_PLATFORM}
 )
 
 SOURCE_GROUP("\\" FILES ${SNUFF_BUILDER_ROOT})
 SOURCE_GROUP("forms" FILES ${SNUFF_BUILDER_FORMS})
 SOURCE_GROUP("application" FILES ${SNUFF_BUILDER_APPLICATION})
+SOURCE_GROUP("threads" FILES ${SNUFF_BUILDER_THREADS})
+SOURCE_GROUP("utils" FILES ${SNUFF_BUILDER_UTILS})
+SOURCE_GROUP("platform" FILES ${SNUFF_BUILDER_PLATFORM})
 
 ADD_EXECUTABLE(snuffbox-builder ${SNUFF_BUILDER_SOURCES})
 TARGET_LINK_LIBRARIES(snuffbox-builder ${wxWidgets_LIBRARIES})
