Replaced all 'GLOB_RECURSE's with 'GLOB', as I only want to add files in the specified folder

--- a/snuffbox-builder/CMakeLists.txt
+++ b/snuffbox-builder/CMakeLists.txt
@@ -1,36 +1,36 @@
-FILE(GLOB_RECURSE SNUFF_BUILDER_ROOT
+FILE(GLOB SNUFF_BUILDER_ROOT
 	"*.cc"
 	"*.h"
 )
 
-FILE(GLOB_RECURSE SNUFF_BUILDER_FORMS
+FILE(GLOB SNUFF_BUILDER_FORMS
 	"forms/*.cpp"
 	"forms/*.h"
 )
 
-FILE(GLOB_RECURSE SNUFF_BUILDER_APPLICATION
+FILE(GLOB SNUFF_BUILDER_APPLICATION
 	"application/*.cc"
 	"application/*.h"
 )
 
-FILE(GLOB_RECURSE SNUFF_BUILDER_THREADS
+FILE(GLOB SNUFF_BUILDER_THREADS
 	"threads/*.cc"
 	"threads/*.h"
 )
 
 IF (WIN32)
-	FILE(GLOB_RECURSE SNUFF_BUILDER_UTILS
+	FILE(GLOB SNUFF_BUILDER_UTILS
 		"utils/win32_*.cc"
 		"utils/win32_*.h"
 	)
 ELSEIF (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-	FILE(GLOB_RECURSE SNUFF_BUILDER_UTILS
+	FILE(GLOB SNUFF_BUILDER_UTILS
 		"utils/linux_*.cc"
 		"utils/linux_*.h"
 	)
 ENDIF ()
 
-FILE(GLOB_RECURSE SNUFF_BUILDER_PLATFORM
+FILE(GLOB SNUFF_BUILDER_PLATFORM
 	"platform/*.cc"
 	"platform/*.h"
 )
