--- a/snuffbox-compilers/CMakeLists.txt
+++ b/snuffbox-compilers/CMakeLists.txt
@@ -1,9 +1,9 @@
-FILE (GLOB_RECURSE SNUFF_COMPILERS_UTILS
+FILE (GLOB SNUFF_COMPILERS_UTILS
 	"utils/*.cc"
 	"utils/*.h"
 )
 
-FILE (GLOB_RECURSE SNUFF_COMPILERS_COMPILERS
+FILE (GLOB SNUFF_COMPILERS_COMPILERS
 	"compilers/*.cc"
 	"compilers/*.h"
 )
