--- a/snuffbox-logging/CMakeLists.txt
+++ b/snuffbox-logging/CMakeLists.txt
@@ -1,9 +1,9 @@
-FILE(GLOB_RECURSE SNUFF_LOGGING_ROOT
+FILE(GLOB SNUFF_LOGGING_ROOT
 	"*.cc"
 	"*.h"
 )
 
-FILE(GLOB_RECURSE SNUFF_LOGGING_CONNECTION
+FILE(GLOB SNUFF_LOGGING_CONNECTION
 	"connection/*.cc"
 	"connection/*.h"
 )
@@ -17,7 +17,7 @@ SET(SNUFF_LOGGING_SOURCES
 )
 
 IF (WIN32)
-	FILE(GLOB_RECURSE SNUFF_LOGGING_WIN32
+	FILE(GLOB SNUFF_LOGGING_WIN32
 		"win32/*.cc"
 		"win32/*.h"
 	)
