--- a/snuffbox-console/CMakeLists.txt
+++ b/snuffbox-console/CMakeLists.txt
@@ -3,22 +3,22 @@ IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${WX_FLAGS}")
 ENDIF ()
 
-FILE(GLOB_RECURSE SNUFF_CONSOLE_ROOT
+FILE(GLOB SNUFF_CONSOLE_ROOT
 	"*.cc"
 	"*.h"
 )
 
-FILE(GLOB_RECURSE SNUFF_CONSOLE_FORMS
+FILE(GLOB SNUFF_CONSOLE_FORMS
 	"forms/*.cpp"
 	"forms/*.h"
 )
 
-FILE(GLOB_RECURSE SNUFF_CONSOLE_APPLICATION
+FILE(GLOB SNUFF_CONSOLE_APPLICATION
 	"application/*.cc"
 	"application/*.h"
 )
 
-FILE(GLOB_RECURSE SNUFF_CONSOLE_LOGGING
+FILE(GLOB SNUFF_CONSOLE_LOGGING
 	"logging/*.cc"
 	"logging/*.h"
 )
