--- a/snuffbox-engine/CMakeLists.txt
+++ b/snuffbox-engine/CMakeLists.txt
@@ -8,37 +8,37 @@ ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux" OR SNUFF_USE_OGL)
 	SET(SNUFF_GRAPHICS_PREFIX "${SNUFF_OGL_VERSION}")
 ENDIF ()
 
-FILE(GLOB_RECURSE SNUFF_ENGINE_GRAPHICS
+FILE(GLOB SNUFF_ENGINE_GRAPHICS
 	"graphics/${SNUFF_GRAPHICS_PREFIX}/*.cc"
 	"graphics/${SNUFF_GRAPHICS_PREFIX}/*.h"
 )
 
-FILE(GLOB_RECURSE SNUFF_ENGINE_MEMORY
+FILE(GLOB SNUFF_ENGINE_MEMORY
 	"memory/*.cc"
 	"memory/*.h"
 )
 
-FILE(GLOB_RECURSE SNUFF_ENGINE_APPLICATION
+FILE(GLOB SNUFF_ENGINE_APPLICATION
 	"application/*.cc"
 	"application/*.h"
 )
 
-FILE(GLOB_RECURSE SNUFF_ENGINE_LOGGING
+FILE(GLOB SNUFF_ENGINE_LOGGING
 	"logging/*.cc"
 	"logging/*.h"
 )
 
-FILE(GLOB_RECURSE SNUFF_ENGINE_CORE
+FILE(GLOB SNUFF_ENGINE_CORE
 	"core/*.cc"
 	"core/*.h"
 )
 
-FILE(GLOB_RECURSE SNUFF_ENGINE_SERVICES
+FILE(GLOB SNUFF_ENGINE_SERVICES
 	"services/*.cc"
 	"services/*.h"
 )
 
-FILE(GLOB_RECURSE SNUFF_ENGINE_IO
+FILE(GLOB SNUFF_ENGINE_IO
 	"io/*.cc"
 	"io/*.h"
 )
@@ -62,7 +62,7 @@ SOURCE_GROUP("services" FILES ${SNUFF_ENGINE_SERVICES})
 SOURCE_GROUP("io" FILES ${SNUFF_ENGINE_IO})
 
 IF (SNUFF_JAVASCRIPT)	
-	FILE(GLOB_RECURSE SNUFF_ENGINE_JS
+	FILE(GLOB SNUFF_ENGINE_JS
 		"js/*.cc"
 		"js/*.h"
 	)
