Setting up the structure for the multi-threaded asset compilation

--- a/snuffbox-builder/CMakeLists.txt
+++ b/snuffbox-builder/CMakeLists.txt
@@ -59,6 +59,7 @@ SOURCE_GROUP("platform" FILES ${SNUFF_BUILDER_PLATFORM})
 
 ADD_EXECUTABLE(snuffbox-builder ${SNUFF_BUILDER_SOURCES})
 TARGET_LINK_LIBRARIES(snuffbox-builder ${wxWidgets_LIBRARIES})
+TARGET_LINK_LIBRARIES(snuffbox-builder snuffbox-compilers)
 
 IF (WIN32)
 	SET_TARGET_PROPERTIES(snuffbox-builder PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
