--- a/snuffbox-console/CMakeLists.txt
+++ b/snuffbox-console/CMakeLists.txt
@@ -1,12 +1,9 @@
-IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
-    EXECUTE_PROCESS(COMMAND wx-config --cxxflags OUTPUT_VARIABLE WX_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${WX_FLAGS}")
-ENDIF ()
-
 FILE(GLOB SNUFF_CONSOLE_ROOT
 	"*.cc"
 	"*.h"
 )
+
+SET (SNUFF_CONSOLE_ROOT ${SNUFF_CONSOLE_ROOT} "../wx_defines.h")
 
 FILE(GLOB SNUFF_CONSOLE_FORMS
 	"forms/*.cpp"
