Fixed Win32 build as wxWidgets was acting up again. FindWxWidgets seems different on Win32/Linux. Started on input

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,7 +85,12 @@ ENDIF ()
 
 SET(wxWidgets_USE_STATIC ON)
 FIND_PACKAGE(wxWidgets REQUIRED COMPONENTS core base richtext html qa xrc propgrid aui adv xml)
-INCLUDE_DIRECTORIES("${wxWidgets_INCLUDE_DIRS}")
+
+IF (WIN32)
+	INCLUDE_DIRECTORIES("${wxWidgets_ROOT_DIR}/include")
+ELSE ()
+	INCLUDE_DIRECTORIES("${wxWidgets_INCLUDE_DIRS}")
+ENDIF ()
 
 IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
     EXECUTE_PROCESS(COMMAND wx-config --cxxflags OUTPUT_VARIABLE WX_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
