--- a/snuffbox-engine/CMakeLists.txt
+++ b/snuffbox-engine/CMakeLists.txt
@@ -43,6 +43,11 @@ FILE(GLOB SNUFF_ENGINE_IO
 	"io/*.h"
 )
 
+FILE(GLOB SNUFF_ENGINE_INPUT
+	"input/*.cc"
+	"input/*.h"
+)
+
 SET(SNUFF_ENGINE_SOURCES
 	${SNUFF_ENGINE_GRAPHICS}
 	${SNUFF_ENGINE_MEMORY}
@@ -51,6 +56,7 @@ SET(SNUFF_ENGINE_SOURCES
 	${SNUFF_ENGINE_CORE}
 	${SNUFF_ENGINE_SERVICES}
 	${SNUFF_ENGINE_IO}
+	${SNUFF_ENGINE_INPUT}
 )
 
 SOURCE_GROUP("graphics\\${SNUFF_GRAPHICS_PREFIX}" FILES ${SNUFF_ENGINE_GRAPHICS})
@@ -60,6 +66,7 @@ SOURCE_GROUP("logging" FILES ${SNUFF_ENGINE_LOGGING})
 SOURCE_GROUP("core" FILES ${SNUFF_ENGINE_CORE})
 SOURCE_GROUP("services" FILES ${SNUFF_ENGINE_SERVICES})
 SOURCE_GROUP("io" FILES ${SNUFF_ENGINE_IO})
+SOURCE_GROUP("input" FILES ${SNUFF_ENGINE_INPUT})
 
 IF (SNUFF_JAVASCRIPT)	
 	FILE(GLOB SNUFF_ENGINE_JS
