Added snuffbox-graphics, made a FindDirectX module that searches for DirectX 11 and 12 in the Windows SDK directories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,8 +108,8 @@ IF (WIN32)
 ENDIF ()
 
 IF (SNUFF_JAVASCRIPT)
-        ADD_DEFINITIONS("/DSNUFF_JAVASCRIPT")
-        ADD_DEFINITIONS("/DV8_IMMINENT_DEPRECATION_WARNINGS")
+    ADD_DEFINITIONS("/DSNUFF_JAVASCRIPT")
+    ADD_DEFINITIONS("/DV8_IMMINENT_DEPRECATION_WARNINGS")
 
 	FIND_PACKAGE(V8 REQUIRED)
 
@@ -120,6 +120,7 @@ ADD_SUBDIRECTORY("snuffbox-logging")
 ADD_SUBDIRECTORY("snuffbox-console")
 ADD_SUBDIRECTORY("snuffbox-compilers")
 ADD_SUBDIRECTORY("snuffbox-builder")
+ADD_SUBDIRECTORY("snuffbox-graphics")
 ADD_SUBDIRECTORY("snuffbox-engine")
 
 IF (SNUFF_BUILD_TEST)
@@ -187,4 +188,5 @@ SET_TARGET_PROPERTIES(snuffbox-logging PROPERTIES FOLDER "snuffbox-mantis")
 SET_TARGET_PROPERTIES(snuffbox-console PROPERTIES FOLDER "snuffbox-mantis")
 SET_TARGET_PROPERTIES(snuffbox-compilers PROPERTIES FOLDER "snuffbox-mantis")
 SET_TARGET_PROPERTIES(snuffbox-builder PROPERTIES FOLDER "snuffbox-mantis")
+SET_TARGET_PROPERTIES(snuffbox-graphics PROPERTIES FOLDER "snuffbox-mantis")
 SET_TARGET_PROPERTIES(snuffbox-engine PROPERTIES FOLDER "snuffbox-mantis")
