--- a/snuffbox-engine/CMakeLists.txt
+++ b/snuffbox-engine/CMakeLists.txt
@@ -1,18 +1,3 @@
-SET(SNUFF_GRAPHICS_PREFIX "ogl")
-
-IF (WIN32 AND NOT SNUFF_USE_OGL)
-	MESSAGE(STATUS "Using DirectX ${SNUFF_DIRECTX_VERSION} graphics device")
-	SET(SNUFF_GRAPHICS_PREFIX "d3d${SNUFF_DIRECTX_VERSION}")
-ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux" OR SNUFF_USE_OGL)
-	MESSAGE(STATUS "Using ${SNUFF_OGL_VERSION} graphics device")
-	SET(SNUFF_GRAPHICS_PREFIX "${SNUFF_OGL_VERSION}")
-ENDIF ()
-
-FILE(GLOB SNUFF_ENGINE_GRAPHICS
-	"graphics/${SNUFF_GRAPHICS_PREFIX}/*.cc"
-	"graphics/${SNUFF_GRAPHICS_PREFIX}/*.h"
-)
-
 FILE(GLOB SNUFF_ENGINE_MEMORY
 	"memory/*.cc"
 	"memory/*.h"
@@ -49,7 +34,6 @@ FILE(GLOB SNUFF_ENGINE_INPUT
 )
 
 SET(SNUFF_ENGINE_SOURCES
-	${SNUFF_ENGINE_GRAPHICS}
 	${SNUFF_ENGINE_MEMORY}
 	${SNUFF_ENGINE_APPLICATION}
 	${SNUFF_ENGINE_LOGGING}
@@ -59,7 +43,6 @@ SET(SNUFF_ENGINE_SOURCES
 	${SNUFF_ENGINE_INPUT}
 )
 
-SOURCE_GROUP("graphics\\${SNUFF_GRAPHICS_PREFIX}" FILES ${SNUFF_ENGINE_GRAPHICS})
 SOURCE_GROUP("memory" FILES ${SNUFF_ENGINE_MEMORY})
 SOURCE_GROUP("application" FILES ${SNUFF_ENGINE_APPLICATION})
 SOURCE_GROUP("logging" FILES ${SNUFF_ENGINE_LOGGING})
@@ -88,6 +71,7 @@ TARGET_LINK_LIBRARIES(snuffbox-engine EASTL)
 TARGET_LINK_LIBRARIES(snuffbox-engine glfw ${GLFW_LIBRARIES})
 TARGET_LINK_LIBRARIES(snuffbox-engine snuffbox-logging)
 TARGET_LINK_LIBRARIES(snuffbox-engine snuffbox-compilers)
+TARGET_LINK_LIBRARIES(snuffbox-engine snuffbox-graphics)
 
 IF (SNUFF_JAVASCRIPT)
         TARGET_LINK_LIBRARIES(snuffbox-engine debug "${V8_LIBS_DEBUG}" optimized "${V8_LIBS_RELEASE}")
