Forgot to include all DirectX directories

--- a/snuffbox-graphics/CMakeLists.txt
+++ b/snuffbox-graphics/CMakeLists.txt
@@ -17,7 +17,7 @@ IF (NOT SNUFF_USE_OGL AND WIN32)
 	FIND_PACKAGE(DirectX REQUIRED)
 
 	SET(D3D_PREFIX "DirectX_D3D${SNUFF_DIRECTX_VERSION}")
-	INCLUDE_DIRECTORIES(${${D3D_PREFIX}_INCLUDE_DIR})
+	INCLUDE_DIRECTORIES(${${D3D_PREFIX}_INCLUDES})
 	SET(GRAPHICS_LIBRARIES ${${D3D_PREFIX}_LIBRARIES})
 ENDIF ()
 
