Added GLM to the project, made sure Vulkan is included correctly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,10 @@ ADD_DEFINITIONS("/DSNUFF_LOG_BUFFERSIZE=${SNUFF_LOG_BUFFERSIZE}")
 ADD_DEFINITIONS("/DSNUFF_LOG_DEFAULT_MAXLINES=${SNUFF_LOG_DEFAULT_MAXLINES}")
 ADD_DEFINITIONS("/DSNUFF_RELOAD_AFTER=${SNUFF_RELOAD_AFTER}")
 
+IF (SNUFF_USE_OGL)
+	ADD_DEFINITIONS("/DSNUFF_USE_OGL")
+ENDIF ()
+
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
 
 FIND_PACKAGE(EASTL REQUIRED)
@@ -78,6 +82,11 @@ SET(GLFW_INSTALL OFF CACHE BOOL "Install GLFW")
 
 FIND_PACKAGE(GLFWSource REQUIRED)
 ADD_SUBDIRECTORY("${GLFW_ROOT_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/deps/glfw")
+
+FIND_PACKAGE(GLM REQUIRED)
+SET (GLM_INSTALL_ENABLE OFF CACHE BOOL "Enable GLM install target")
+ADD_SUBDIRECTORY("${GLM_ROOT_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/deps/glm")
+INCLUDE_DIRECTORIES(${GLM_ROOT_DIR})
 
 IF (WIN32)
         SET(wxWidgets_ROOT_DIR "deps/wxWidgets" CACHE PATH "The root directory of wxWidgets")
@@ -184,6 +193,7 @@ ENDIF ()
 
 SET_TARGET_PROPERTIES(EASTL PROPERTIES FOLDER "deps/eastl")
 SET_TARGET_PROPERTIES(EABase_ide PROPERTIES FOLDER "deps/eastl")
+SET_TARGET_PROPERTIES(glm_dummy PROPERTIES FOLDER "deps/glm")
 SET_TARGET_PROPERTIES(snuffbox-logging PROPERTIES FOLDER "snuffbox-mantis")
 SET_TARGET_PROPERTIES(snuffbox-console PROPERTIES FOLDER "snuffbox-mantis")
 SET_TARGET_PROPERTIES(snuffbox-compilers PROPERTIES FOLDER "snuffbox-mantis")
