--- a/snuffbox-graphics/CMakeLists.txt
+++ b/snuffbox-graphics/CMakeLists.txt
@@ -17,11 +17,19 @@ IF (NOT SNUFF_USE_OGL AND WIN32)
 	FIND_PACKAGE(DirectX REQUIRED)
 
 	SET(D3D_PREFIX "DirectX_D3D${SNUFF_DIRECTX_VERSION}")
-	INCLUDE_DIRECTORIES(${${D3D_PREFIX}_INCLUDES})
+	SET(GRAPHICS_INCLUDES ${${D3D_PREFIX}_INCLUDES})
 	SET(GRAPHICS_LIBRARIES ${${D3D_PREFIX}_LIBRARIES})
+ENDIF ()
+
+IF (SNUFF_USE_OGL AND SNUFF_GRAPHICS_PREFIX MATCHES "vulkan")
+	FIND_PACKAGE(Vulkan REQUIRED)
+
+	SET(GRAPHICS_INCLUDES ${Vulkan_INCLUDE_DIRS})
+	SET(GRAPHICS_LIBRARIES ${Vulkan_LIBRARIES})
 ENDIF ()
 
 SOURCE_GROUP("${SNUFF_GRAPHICS_PREFIX}" FILES ${SNUFF_GRAPHICS_SOURCES})
 
 ADD_LIBRARY(snuffbox-graphics ${SNUFF_GRAPHICS_SOURCES})
+TARGET_INCLUDE_DIRECTORIES(snuffbox-graphics PUBLIC ${GRAPHICS_INCLUDES})
 TARGET_LINK_LIBRARIES(snuffbox-graphics ${GRAPHICS_LIBRARIES})
